Fixed class reverse. Notifications very roughly working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- receivers -->
-        <receiver
-            android:name="com.appstronautstudios.library.receivers.ReceiverNotification"
-            android:enabled="true"
-            android:exported="false"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" />
-        <!-- Will not be called unless the application explicitly enables it -->
-        <receiver
-            android:name="com.appstronautstudios.library.receivers.ReceiverDeviceBoot"
-            android:enabled="false">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
