updated gradle and target. Added handling for time change broadcasts. Fixed issues with demo project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    namespace 'com.appstronautstudios.repeatingalarmmanagerdemo'
+    compileSdkVersion 34
     defaultConfig {
-        applicationId "com.appstronautstudios.repeatingalarmmanager"
-        minSdkVersion 19
-        targetSdkVersion 33
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -23,9 +23,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'com.github.appstronautstudios:segmented-controller:1.0.1'
